# azweather

./: README.md
AvnetAzureSphere_Weather/: AzSphereWheatherStation.sln
AvnetAzureSphere_Weather/AzSphereWheatherStation/: AzSphereWheatherStation.vcxproj  AzSphereWheatherStation.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  HTMLPage.htm  adc.c  adc.h  app_manifest.json  applibs_versions.h  azure_iot_utilities.c  azure_iot_utilities.h  bme680_defs.h  bme680_sensor.c  bme680_sensor.h  bsec_datatypes.h  build_options.h  connection_strings.h  deviceTwin.h  device_twin.c  epoll_timerfd_utilities.c  file.c  file.h  font.h  i2c.c  i2c.h  iaq.h  launch.vs.json  led.c  led.h  ltc1695.c  ltc1695.h  main.c  mt3620_avnet_dev.h  oled.c  oled.h  real_core.c  real_core.h  sd1306.c  sd1306.h  smuart04l.c  (+5 more)
AvnetAzureSphere_Weather/Hardware/: README.md
AvnetAzureSphere_Weather/Hardware/ailink_wfm620rsc1/: README.md  ailink_wfm620rsc1.json
AzSphere_Weather_RTApp/AzSphereWeather_RTApp_MT3620_BMetal/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  launch.vs.json  main.c  mt3620-adc.c  mt3620-adc.h  mt3620-baremetal.h  mt3620-gpio.c  mt3620-inter-message.c  mt3620-inter-message.h  mt3620-intercore.c  mt3620-intercore.h  mt3620-timer-poll.c  mt3620-timer.h  mt3620-uart-poll.h
AzSphere_Weather_RTApp/AzSphere_LED_SoftPWM_RTApp_MT3620_BMetal/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  linker.ld  main.c  mt3620-gpio.h  mt3620-inter-message.c  mt3620-inter-message.h  mt3620-timer-poll.h  mt3620-timer.c  mt3620-uart-poll.c
(+28 files in other folders)
